<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textview">TextView</string>
    <string name="Points">Points</string>
    <string name="imageforme">imageforme</string>
    <string name="_16x7_cases">16X7 CASES</string>
    <string name="_8x7_cases">8x7 cases</string>
    <string name="choissisez_votre_difficult">Choissisez votre difficulté:</string>
    <string name="tetrix">TETRIX</string>
    <string name="_12x7_cases">12x7 cases</string>
    <string name="lemoult_maxime">LEMOULT Maxime</string>
    <string name="todo">TODO</string>
</resources>